[gd_scene load_steps=3 format=3 uid="uid://drv13t1lrwqrd"]

[ext_resource type="Script" path="res://Interface/level_selection.gd" id="1_n4g8w"]
[ext_resource type="Texture2D" uid="uid://cm1ip076ytvp4" path="res://assets/screen_accueil-blured.png" id="2_63e44"]

[node name="LevelSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n4g8w")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -2

[node name="BackgroundImage" type="TextureRect" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_63e44")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.237539, 0.237539, 0.237539, 0.427451)

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -147.5
offset_top = 50.0
offset_right = 147.5
offset_bottom = 119.0
grow_horizontal = 2

[node name="MapsLabel" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Cartes"
horizontal_alignment = 1
uppercase = true

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -150.0
offset_right = 100.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="EmptyLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
uppercase = true

[node name="Map1" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
text = "Carte 1"

[node name="Map2" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Carte 2"

[node name="Map3" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Carte 3"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Retour"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Map1" to="." method="_on_map_1_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Map2" to="." method="_on_map_2_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Map3" to="." method="_on_map_3_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
